--- a/day_07/day_07/day_07.vcxproj.filters
+++ b/day_07/day_07/day_07.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="prg1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prg2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
