--- a/classwork/day11/day11/day11.vcxproj.filters
+++ b/classwork/day11/day11/day11.vcxproj.filters
@@ -18,16 +18,10 @@
     <ClCompile Include="prg01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="prg02.cpp">
+    <ClCompile Include="prog02.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="prg03.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="prg04.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="q6_prg01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
