--- a/Assignment/2D_array/2D_array/2D_array.vcxproj.filters
+++ b/Assignment/2D_array/2D_array/2D_array.vcxproj.filters
@@ -15,13 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="prg01.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="prg02.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="prg03.cpp">
+    <ClCompile Include="2D_Array.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
