--- a/Assignment/logical1/logical1/logical1.vcxproj
+++ b/Assignment/logical1/logical1/logical1.vcxproj
@@ -145,9 +145,13 @@
     <ClCompile Include="prg06.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="prg07.cpp" />
+    <ClCompile Include="prg07.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="prg08.cpp" />
-    <ClCompile Include="prg09.cpp" />
+    <ClCompile Include="prg09.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="prg10.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
