--- a/assessments/cppbasics/cppbasics/cppbasics.vcxproj.filters
+++ b/assessments/cppbasics/cppbasics/cppbasics.vcxproj.filters
@@ -204,5 +204,26 @@
     <ClCompile Include="prg63.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prg64.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prg65.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prg66.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prg67.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prg68.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prg69.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prg70.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
