--- a/classwork/day21/day21/day21.vcxproj.filters
+++ b/classwork/day21/day21/day21.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="student_management.cpp">
+    <ClCompile Include="std.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
