--- a/classwork/day 23/day 23/day 23.vcxproj
+++ b/classwork/day 23/day 23/day 23.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bb416ef7-9544-421c-bd70-2aba5bf70dba}</ProjectGuid>
-    <RootNamespace>day21</RootNamespace>
+    <ProjectGuid>{ce709d01-c5f1-400b-9700-dead8e94642d}</ProjectGuid>
+    <RootNamespace>day23</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="std.cpp" />
+    <ClCompile Include="employee_management_system.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
