--- a/Assignment/day34/day34/day34.vcxproj.filters
+++ b/Assignment/day34/day34/day34.vcxproj.filters
@@ -18,5 +18,14 @@
     <ClCompile Include="prog03.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog04.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prog01.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prog02.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
