--- a/Assignment/day38/day38/day38.vcxproj.filters
+++ b/Assignment/day38/day38/day38.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="prog05.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog06.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
