--- a/Assignment/day45/day45/day45.vcxproj.filters
+++ b/Assignment/day45/day45/day45.vcxproj.filters
@@ -15,16 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="prog01.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="prog02.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="prog03.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="prog04.cpp">
+    <ClCompile Include="aution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
