--- a/assessments/week09/week09.vcxproj.filters
+++ b/assessments/week09/week09.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="program.cpp">
+    <ClCompile Include="program1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
